Add restore deleted play to win game (#77)
